# Pyris

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .whitesource  Dockerfile  Dockerfile.development  README.MD  README.md  Taskfile.yml  app.py  application-docker.test.yml  application.example.yml  application.test.yml  docker-compose.yml  example_application.yml  llm_config.example.yml  log_conf.yml  main.py  pyproject.toml  pyris-server-cli  pytest.ini  requirements.txt  shields.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: build.yml  deploy-production.yml  deploy-test.yml  deploy.yml  lint.yml  pullrequest-labeler.yml  test.yml
app/: app.py  config.py  dependencies.py  main.py  sentry.py
app/common/: PipelineEnum.py  __init__.py  custom_exceptions.py  message_converters.py  pyris_message.py  singleton_abstract.py  token_usage_dto.py
app/content_service/: get_lecture_from_artemis.py
app/core/: custom_exceptions.py
app/data/: db.py
app/data_ingestion/: download_ingest_lecture.py  download_ingest_repository.py
app/domain/: __init__.py  chat_gpt_wrapper_pipeline_execution_dto.py  codehint.py  competency_extraction_pipeline_execution_dto.py  course.py  dtos.py  error_response_dto.py  exercise.py  feature_dto.py  health_status_dto.py  image.py  inconsistency_check_pipeline_execution_dto.py  ingestion_pipeline_execution_dto.py  iris_message.py  message.py  model_dto.py  pyris_image.py  (+9 more)
docker/: nginx.yml  pyris-dev.yml  pyris-production-internal.yml  pyris-production.yml  pyris.yml  weaviate.yml
tests/: conftest.py
(+285 files in other folders)
